Added more questions

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -79,6 +79,15 @@ body {
 	}
 }
 
+.logic-fun {
+	color: #0077aa;
+	td, th {
+		border: 1px solid #dddddd;
+		text-align: center;
+		padding: 8px;
+	}
+}
+
 .studyComponent {
 	width: 550px;
 	margin: 100px auto;
