Translations, adapted the styles to sapi colors

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,8 @@
 
 /* freeCodeCamp theme colors: */
 
-$green: #42DB9D;
-$darkGreen: #00BF72;
+$green: #236f45;
+$darkGreen: #236f45;
 $lightBlue: #2DB9FF;
 $lightRed: #E60036;
 $lightPink: #FF5864;
